--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,7 +1,8 @@
 <div ng-controller="homeController">
-<h1>Nequil was here</h1>
-<div ng-repeat="movie in movies">
-    <img ng-src="{{ movie.poster }}" alt="">
-    <p>{{ movie.title }}</p>
-</div>
+    <div ng-repeat="movie in movies">
+            <a ng-href="/#/{{ movie.id }}">
+            <img ng-src="{{ movie.poster }}" alt="">
+            <p>{{ movie.title }}</p>
+        </a>
+        </div>
 </div>
